Fix horizontal scrollbar thickness

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar {
     width: var(--default-spacing);
+    height: var(--default-spacing);
 }
 
 ::-webkit-scrollbar-button {
